Added support for use of java proxy

--- a/src/Makefile
+++ b/src/Makefile
@@ -39,13 +39,22 @@ M4             = m4
 M4FILE         = ${REG_STEER_HOME}/src/conf/${ARCH}.m4
 RMCMD          = rm
 
+BIN_DIR        = ${HOME}/bin
+JAVAC          = /usr/java2/bin/javac
+
 # Whether to use 32 or 64-bit depends on contents of G and NBIT - these
 # are passed to make on the cmd line
-INCLUDE_PATH   = ${REG_STEER_HOME}/include
-XML_PARSE_PATH = ${REG_STEER_HOME}/expat/xmlparse
+EXPAT_PARSE_PATH = ${REG_STEER_HOME}/expat/xmlparse
+XML_PARSE_PATH = ${REG_STEER_HOME}/libxml2-2.4.24/.libs
+
+REG_INCLUDE_PATH = ${REG_STEER_HOME}/include
+INCLUDE_PATH   = -I${REG_INCLUDE_PATH}  \
+-I${REG_STEER_HOME}/libxml2-2.4.24/include \
+-I${EXPAT_PARSE_PATH}
+
 LIB_PATH       = ${REG_STEER_HOME}/lib$(NBIT)
 CC             = cc
-CC_FLAGS       = -ansi $(G) -I${INCLUDE_PATH} -I${XML_PARSE_PATH}
+CC_FLAGS       = -ansi $(G) ${INCLUDE_PATH}
 
 .c.o:
 	${CC} ${CC_FLAGS} -c $< -o $@
@@ -55,6 +64,8 @@ all:
 	make ReG_Steer_Appside_f
 	make ReG_Steer_Steerside
 	make ReG_Steer_Common
+	make ReG_Steer_Proxy_utils
+	make ReG_Steer_Proxy
 
 appside:
 	make ReG_Steer_Appside
@@ -68,6 +79,12 @@ steerside:
 common:
 	make ReG_Steer_Common
 
+proxy_utils:
+	make ReG_Steer_Proxy_utils
+
+proxy:
+	make ReG_Steer_Proxy
+
 ReG_Steer_Appside_f: ReG_Steer_Appside_f.o
 	ar rv ${LIB_PATH}/libReG_Steer.a ReG_Steer_Appside_f.o
 
@@ -80,38 +97,51 @@ ReG_Steer_Steerside: ReG_Steer_Steerside.o
 ReG_Steer_Common: ReG_Steer_Common.o
 	ar rv ${LIB_PATH}/libReG_Steer.a ReG_Steer_Common.o
 
+ReG_Steer_Proxy_utils: ReG_Steer_Proxy_utils.o
+	ar rv ${LIB_PATH}/libReG_Steer.a ReG_Steer_Proxy_utils.o
+
+ReG_Steer_Proxy: ReG_Steer_Proxy.java
+	${JAVAC} ReG_Steer_Proxy.java
+	mv -f ReG_Steer_Proxy.class ${BIN_DIR}/.
+
 ReG_Steer_Appside.o: ReG_Steer_Appside.c \
-	 ${INCLUDE_PATH}/ReG_Steer_Appside.h \
-	 ${INCLUDE_PATH}/ReG_Steer_types.h \
-	 ${INCLUDE_PATH}/ReG_Steer_Appside_internal.h \
-	 ${INCLUDE_PATH}/ReG_Steer_Common.h
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Appside.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_types.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Appside_internal.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Common.h
 
 ReG_Steer_Steerside.o: ReG_Steer_Steerside.c \
-	 ${INCLUDE_PATH}/ReG_Steer_Steerside.h \
-	 ${INCLUDE_PATH}/ReG_Steer_types.h \
-	 ${INCLUDE_PATH}/ReG_Steer_Steerside_internal.h \
-	 ${INCLUDE_PATH}/ReG_Steer_Common.h
+         ReG_Steer_Proxy.java \
+         ReG_Steer_Proxy_utils.c \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Proxy_utils.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Steerside.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_types.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Steerside_internal.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Common.h
 
 ReG_Steer_Common.o: ReG_Steer_Common.c \
-	 ${INCLUDE_PATH}/ReG_Steer_types.h \
-	 ${INCLUDE_PATH}/ReG_Steer_Common.h
+	 ${REG_INCLUDE_PATH}/ReG_Steer_types.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Common.h
+
+ReG_Steer_Proxy_utils.o: ReG_Steer_Proxy_utils.c \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_types.h \
+	 ${REG_INCLUDE_PATH}/ReG_Steer_Proxy_utils.h
 
 ReG_Steer_Appside_f.c: ReG_Steer_Appside_f.m4 \
 	 ${M4FILE}
 	${M4} ${M4FILE} ReG_Steer_Appside_f.m4 > $@
 
 ReG_Steer_Appside_f.o: ReG_Steer_Appside_f.c \
-         ${INCLUDE_PATH}/ReG_Steer_Appside_internal.h
-
-ReG_Steer_Appside_f.c: ReG_Steer_Appside_f.m4
+         ${REG_INCLUDE_PATH}/ReG_Steer_Appside_internal.h
 
 clean:
-	rm -f ReG_Steer_Steerside.o ReG_Steer_Appside.o ReG_Steer.ln *~ 
-	rm -f ReG_Steer_Common.o ReG_Steer_Appside_f.o
+	rm -f *.o ReG_Steer.ln *~ 
 	rm -f ReG_Steer_Appside_f.c
-	rm -f ${INCLUDE_PATH}/*~
+	rm -f ${REG_INCLUDE_PATH}/*~
+	rm -f ${BIN_DIR}/ReG_Steer_Proxy.class
 	ar dv ${LIB_PATH}/libReG_Steer.a ReG_Steer_Steerside.o \
-		ReG_Steer_Appside.o ReG_Steer_Appside_f.o ReG_Steer_Common.o
+		ReG_Steer_Appside.o ReG_Steer_Appside_f.o \
+                ReG_Steer_Common.o ReG_Steer_Proxy_utils.o
 
 tidy:
 	rm -f ReG_Steer_Steerside.o ReG_Steer_Appside.o \
