Removed expat xml library from repository - library now uses the Gnome xml parser.

--- a/examples/mini_steerer/Makefile
+++ b/examples/mini_steerer/Makefile
@@ -6,15 +6,16 @@ TARGET   = mini_steerer
 CC       = cc
 CC_FLAGS = -ansi $(G) -I${REG_STEER_HOME}/include
 
+# STEER_LIBS is the directory where libReG_Steer.a
 STEER_LIBS = -L${REG_STEER_HOME}/lib$(NBIT)
-XML_LIBS   = -L${REG_STEER_HOME}/expat/xmlparse
+XML_LIBS   = -L${REG_XML_LIBDIR}$(NBIT)
 
 .c.o:
 	${CC} ${CC_FLAGS} -c $< -o $@
 
 ${TARGET}: ${TARGET}.o
 	${CC} ${CC_FLAGS} ${TARGET}.o -o $@ \
-${XML_LIBS} ${STEER_LIBS} -lReG_Steer -lexpat
+${XML_LIBS} ${STEER_LIBS} -lReG_Steer -lxml2 -lz -lm
 	mv ${TARGET} ${HOME}/bin/.
 
 clean:
