--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,4 @@
-#    Makefile for 64-bit steering library.
-#    Currently only tested on SGI Origin.
+#    Makefile for RealityGrid steering library.
 #
 #    (C)Copyright 2002 The University of Manchester, United Kingdom,
 #    all rights reserved.
@@ -9,37 +8,41 @@
 #    Manchester as part of the RealityGrid project.
 #
 #    This software has been tested with care but is not guaranteed for
-#    any particular purpose. Neither the authors, nor the University of
-#    Manchester offer any warranties or representations, nor do they
-#    accept any liabilities with respect to this software.
+#    any particular purpose. Neither the copyright holder, nor the
+#    University of Manchester offer any warranties or representations,
+#    nor do they accept any liabilities with respect to this software.
 #
-#    This program must not be used for commmercial gain without the
+#    This software must not be used for commercial gain without the
 #    written permission of the authors.
 #    
+#    This software must not be redistributed without the written
+#    permission of the authors.
+#
+#    Permission is granted to modify this software, provided any
+#    modifications are made freely available to the original authors.
+# 
 #    Supercomputing, Visualization & e-Science Group
 #    Manchester Computing
 #    University of Manchester
 #    Manchester M13 9PL
-#
-#    email:  csar-advice@cfs.ac.uk.
-#    Tel:    +44 161 275 6824/5997
-#    Fax:    +44 161 275 6040    
 #    
-#    Date          Version    Updates                            Author
-#    ----          -------    -------                            ------
-#    23.7.2002       0.1                                         A Porter
+#    WWW:    http://www.sve.man.ac.uk  
+#    email:  sve@man.ac.uk
+#    Tel:    +44 161 275 6095
+#    Fax:    +44 161 275 6800    
 #
-#---------------------------------------------------------------------------
+#    Initial version by:  A Porter, 23.7.2002
+#
+#------------------------------------------------------------------------
 
 # Set-up access to M4 scripts for production of F90 wrappers, this is
 # taken from the PVM project.
-ARCH           = SGI64
-M4             = m4
-M4FILE         = ${REG_STEER_HOME}/src/conf/${ARCH}.m4
-RMCMD          = rm
-
+ARCH           = LINUX
 BIN_DIR        = ${HOME}/bin
-JAVAC          = /usr/java2/bin/javac
+JAVAC          = javac
+M4             = m4
+
+M4FILE         = ${REG_STEER_HOME}/src/conf/${ARCH}.m4
 
 # Whether to use 32 or 64-bit depends on contents of G and NBIT - these
 # are passed to make on the cmd line
