--- a/Makefile.include
+++ b/Makefile.include
@@ -1,5 +1,4 @@
-#-----------------------------------------------------------------
-#    Makefile for miniature, serial steerable-application in F90
+#    Include file to allow user configuration of build process.
 #
 #    (C)Copyright 2002 The University of Manchester, United Kingdom,
 #    all rights reserved.
@@ -32,25 +31,34 @@
 #    Tel:    +44 161 275 6095
 #    Fax:    +44 161 275 6800    
 #
-#    Initial version by: <name>
-#-----------------------------------------------------------------
+#    Initial version by:  A Porter.
+#
+#--------------------------------------------------------------------
 
-include ../../globus_definitions
-include ../../Makefile.include
+# Architecture of this platform.  Choose the most appropriate from
+# those listed in the src/conf directory.
+ARCH = LINUX
+# Edit the two following lines if 32-bit binaries are desired 
+# (NBIT = 32 and C_FLAGS=-n32).
+NBIT = 32
+CC = cc
+C_FLAGS = ${CFLAGS} -g 
+F90 = f90
+F90_FLAGS = -g
+# Location of java compiler - used to produce proxy binary
+JAVAC          = 
+# Location of the M4 macro processor (used to generate F90 wrappers)
+M4 = /usr/bin/m4
+# Location of the archive command
+AR = /usr/bin/ar
+# Flags need to add an object file to an archive
+AR_FLAGS = rv
+# Directory to put executables in (mini_app, mini_steerer etc.)
+LOCAL_BIN_DIR  = ${HOME}/bin
 
-# G and NBIT are passed to make on cmd line
+#----------------------------------------------------------------
 
-TARGET   = mini_app2
-
-.f90.o:
-	${F90} ${F90_FLAGS} -C ${STEER_INCLUDES} ${GLOBUS_INCLUDES} -c $< -o $@
-
-${TARGET}: ${TARGET}.o \
-mini_app2.f90 \
-${REG_STEER_HOME}/include/reg_steer_f90.inc
-	${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} -lReG_Steer -lxml2 ${GLOBUS_PKG_LIBS}
-	mv ${TARGET} ${LOCAL_BIN_DIR}/.
-
-clean:
-	rm -f *.o *~ core ${TARGET}
-
+STEER_INCLUDES = -I${REG_STEER_HOME}/include \
+                 -I${REG_XML_INCDIR}
+STEER_LIBS = -L${REG_STEER_HOME}/lib$(NBIT) \
+             -L${REG_XML_LIBDIR}$(NBIT)
