--- a/examples/mini_app_f90_parallel/Makefile
+++ b/examples/mini_app_f90_parallel/Makefile
@@ -35,27 +35,19 @@
 #    Initial version by:  Andrew Porter.
 #-----------------------------------------------------------------------
 #
-# G and NBIT are passed to make on cmd line
 
 include ../../globus_definitions
+include ../../Makefile.include
 
 TARGET   = mini_app_para
 
-F90       = f90
-F90_FLAGS = -C $(G) -check_bounds
-
-# STEER_LIBS is the directory where libReG_Steer.a &
-# libxml2.a can be found
-STEER_LIBS = -L${REG_STEER_HOME}/lib$(NBIT)
-XML_LIBS   = -L${REG_XML_LIBDIR}$(NBIT)
-
 .f90.o:
-	${F90} ${F90_FLAGS} -I${REG_STEER_HOME}/include  ${GLOBUS_INCLUDES} -c $< -o $@
+	${F90} ${F90_FLAGS} ${STEER_INCLUDES} ${GLOBUS_INCLUDES} -c $< -o $@
 
 ${TARGET}: ${TARGET}.o \
 mini_app_para.f90 \
-${REG_STEER_HOME}/include/reg_steer_f90.inc
-	${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${XML_LIBS} ${STEER_LIBS} -lmpi -lReG_Steer -lxml2 -lz -lm ${GLOBUS_PKG_LIBS}
+../../include/reg_steer_f90.inc
+	${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} -lmpi -lReG_Steer -lxml2 ${GLOBUS_PKG_LIBS}
 	mv ${TARGET} ${HOME}/bin/.
 
 clean:
