Added code to support steering via globus_io; currently untested but re-factored file-based stuff appears OK.

--- a/examples/mini_steerer/Makefile
+++ b/examples/mini_steerer/Makefile
@@ -36,6 +36,7 @@
 #---------------------------------------------------------------------
 #
 
+include ../../globus_definitions
 include ../../Makefile.include
 
 TARGET   = mini_steerer
@@ -45,7 +46,7 @@ TARGET   = mini_steerer
 
 ${TARGET}: ${TARGET}.o
 	${CC} ${C_FLAGS} ${TARGET}.o -o $@ \
-${STEER_LIBS} -lReG_Steer -lxml2
+${STEER_LIBS} -lReG_Steer -lxml2 ${GLOBUS_PKG_LIBS}
 	mv ${TARGET} ${HOME}/bin/.
 
 clean:
