--- a/examples/mini_app_f90/Makefile
+++ b/examples/mini_app_f90/Makefile
@@ -44,10 +44,12 @@ TARGET   = mini_app2
 .f90.o:
 	${F90} ${F90_FLAGS} -C ${STEER_INCLUDES} ${GLOBUS_INCLUDES} -c $< -o $@
 
-${TARGET}: mini_app2.o \
-${REG_STEER_HOME}/include/reg_steer_f90.inc
-	${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} -lReG_Steer -lm -lxml2 ${GLOBUS_PKG_LIBS}
+${TARGET}: ${TARGET}.o ${REG_STEER_HOME}/include/reg_steer_f90.inc
+	${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} ${GLOBUS_LDFLAGS} -lReG_Steer -lz -lxml2 ${GLOBUS_PKG_LIBS}
 	mv ${TARGET} ${LOCAL_BIN_DIR}/.
+
+mini_app2.o: mini_app2.f90
+	${F90} ${F90_FLAGS} -C ${STEER_INCLUDES} ${GLOBUS_INCLUDES} -c $< -o $@
 
 clean:
 	rm -f *.o *~ core ${TARGET}
